Added Architecture image and comments from Saheed

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -252,6 +252,15 @@ Table \ref{table:1} shows a list of requirements our system will fulfil (please 
 \label{architecture}
 Given the goals the team and the client set for this project there were several considerations to be made to make the architecture flexible and perform enough to satisfy the requirements. Having the requirement of being able to accept data from many kinds of sensors made it clear that the architecture had to be made up of a variety of strategies to homogenise the data so that it could be processed in a more abstract way. Subsequent processing could then be performed based on a fixed data model that would make it easier to rapidly develop and evaluate different processing strategies.
 
+
+\begin{figure}
+\label{fig:architecture}
+\centering
+\includegraphics[width=\textwidth]{Architecture}
+\caption{Temporary architecture figure}
+\end{figure}
+
+
 \subsection{Data collection}
 \label{dataCollection}
 The data collection aspect of the project was a major architectural concern since the data processing part of the pipeline is supposed to handle data coming from may different kinds of sensors. This part would have to be able to filter and make sense of a high volume of sensor readings and prepare them for further processing. Therefore the SSE team set up a simple, well documented, API for the data collection applications to communicate with. This decoupled the processing platform from the data collection by exposing an interface that clearly stated the data expected by the processing platform from the data collection applications.
