--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -358,13 +358,24 @@ The obstacle REST API has several logic components that need unit testing in add
 Given the nature of the project the main success criteria is if the system can accurately determine the location of an obstacle in space based on the sensor data given. The evaluation of this fact was done by doing experiments with the actual sensor hardware, extracting the noise level, accuracy and other quality metrics and then generating sensor output based on those metrics. This generation of test data allowed us to evaluate the accuracy of our system in a controlled environment. We evaluated the robustness of our processing methods by increasing the noise in the generated sensor signal in addition to controlling the rate of data sent to the system. The throughput of the system was also evaluated by sending large amounts of sensor readings at a time and measuring response time, packet loss and transmission delay.
 
 \subsection{Tools and Data generation}
-
+The data was generated through a simulation script written in Python. The simulation was set up by specifying an agent, some obstacles and a set of sensors. The agent and obstacles would have a location in space and the agent had a maximum velocity, rotation speed and other movement parameters. The simulation would then be configured by laying out a path for the agent to move through while the sensors were polled to check if they would detect an obstacle. The simulation allowed for noise to be added to the sensor readings that would give a more realistic way of processing sensor data that will inherently contain error and noise.
 
 \subsection{Performance and Scalability}
-Discussion of the amount of messages that can be processed in Kafka -> Spark -> Cassandra.
-Talking about aggregation and such.
-Packet drop, burst of messages vs sustained.
 
+\begin{center}
+\begin{tabularx}{\textwidth}{| X | X | X | X |} 
+\hline
+\# Readings & Transmission time & \# Readings/Second & Packet Loss \% \\
+\hline
+7400 & 2.220366535 & 3332.783071 & 1.135135135 \\
+\hline
+74000 & 15.81466027 & 4678.380612 & 0.7731087894 \\
+\hline
+740000 & 119.9508543 & 5738.18339 & 5.847595525 \\
+\hline
+\end{tabularx}
+\label{tab:performance}
+\end{center}
 
 \begin{figure}
 \centering
