--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -379,7 +379,7 @@ After implementing the processing pipeline the first performance test performed 
 \label{tab:performance}
 \end{center}
 
-The results showed that the pipeline handled loads far beyond what was stipulated in the quality requirements, the packet loss is within acceptable limits (2\%) for over 100000 readings and the throughput was an order of magnitude higher than the goal. The quality requirements needed the pipeline to handle 100 readings per second but the load testing showed that the pipeline could handle over 5000 messages before it started to experience deteriorating performance.
+The results shown in table~\ref{tab:performance} show that the pipeline handled loads far beyond what was stipulated in the quality requirements, the packet loss is within acceptable limits (2\%) for over 100000 readings and the throughput was an order of magnitude higher than the goal. The quality requirements needed the pipeline to handle 100 readings per second but the load testing showed that the pipeline could handle over 5000 messages before it started to experience deteriorating performance.
 
 \begin{figure}
 \centering
@@ -419,8 +419,6 @@ Describe the testing scenario, the simulator and show diagrams that compare both
 
 
 \subsection{Acceptance}
-
-
 %TODO: Talk about the cs students evaluation?
 
 \section{Life cycle and Future Work}
