--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -422,18 +422,16 @@ Describe the testing scenario, the simulator and show diagrams that compare both
 
 \section{Life cycle and Future Work}
 \subsection{Current state}
-Describe the current state of the project\\
-Capabilities, how many of the Goals and Requirements have been fulfilled.\\
-Quality requirements and the tests we used to evaluate them\\
+The Lighthouse project now can process data from all kinds of sensors and achieves the aim of detecting obstacles. The project reaches the goal that is using low-cost and off-the-shelf sensors. Currently, the magnetic sensor in the smartphone, camera, Inferred and Ultrasound sensors works together to collect data from the indoor environment and send all the information collected to data processing component by implementing the API created by SSE team. After the processing, feedback will be shown to users in map and 3D sound. The two most important factor of performance are latency and accuracy. In our testing mentioned above, the quality of the project can fulfil the requirement of indoor real-time obstacle detection.(need to add some testing result)
 
 \subsection{Maintenance and Scaling}
 % TODO: Enumerate limitation of the product
 % TODO: Describe how we can go from prototype to a running system
 % TODO: Add confidential appendix to report that does not go to the client.
-Describe how the project can be maintained and scaled in the event of deployment.\\
-Talk about the migration plan to Azure.\\
-
-
+In the future, when the project needs to be expanded with other types of sensors, this platform can still provide the interface for communication between device and processing component. 
+Although this product can fulfil the client’s requirements, it has huge performance disparity with a real industry product. Since budget and experience are limited, the capability of the project is not sufficed to support thousands of simultaneous user query.
+This project can be migrated to Azure which is a Microsoft product and can provide global coverage and high availability and stability. The components of the project need to be rewritten in C\# and Azure analog technologies. First, Kafka part in this project should be replaced by Azure Event Hub. Next, Apache Storm consumes messages from the queue, which should be easy to do since Storm is hosted on HDInsight. Apache Storm is an alternative to Spark Streaming that has many of the same features but is built specifically for stream processing. Storm then performs the same processing as in the prototype stage and passes the result to a wide column store database. For the database, HBase is an alternative of Cassandra. When moving the project to Azure,  there will be an Asp.NET MVC REST API that queries HBase through the .NET SDK to expose the obstacles to the internet.
+
 \section{Conclusions}
 
 % TODO: identify the topic takeaway messages.
